change site title metadata

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gatsby-starter-stellar",
-  "description": "Gatsby Starter - Stellar by HTML5 UP",
+  "name": "Joystick Clinic",
+  "description": "Joystick Clinic - E-sports Coaching",
   "version": "1.0.0",
   "author": "Hunter Chang",
   "dependencies": {
