--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Joystick Clinic",
+  "name": "joystickclinic",
   "description": "Joystick Clinic - E-sports Coaching",
   "version": "1.0.0",
   "author": "Hunter Chang",
